# tp_cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  array_gen.py  matrix.mat
.travis/cmake/: CodeCoverage.cmake
gtests/: tests.c  tests.cpp
include/: matrix.h
linters/: run.sh
project/include/: matrix.h  utils.h
project/src/: main.c  matrix.c
project_libs/: CMakeLists.txt  array_processing.h
project_libs/dynamic_lib/: multi-thread.c
project_libs/static_lib/: single-thread.c
src/: main.c  main.cpp  matrix.c  matrix.cpp
